fixed issue with sorting bars jumping

--- a/Visusalizer Project/src/index.css
+++ b/Visusalizer Project/src/index.css
@@ -81,7 +81,7 @@
   flex-direction: column;
   align-items: center;
   flex-shrink: 0;
-  height: 100%;
+  height: 595px;
   padding-bottom: 25px;
 }
 
